# ferite-module-cmail

./: .cvsignore  ChangeLog  INSTALL  Makefile.am  README  configure.ac
mail/: .cvsignore  Makefile.am  cmail.fec  cmail.xml  cmime.fec  imap_utility.c  imap_utility.h  imap_utility.lo  tingeling.c
test/: embed_image_sendtest.fe  fetchtest.fe  multipart_sendtest.fe  sendtest.fe
